# factworld

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: USAGE.md  composite-results.md  fprm.md  openrouter-composite-baseline.json  openrouter-composite-baseline.md  openrouter-composite-format.json  openrouter-composite-format.md  openrouter-composite-lengths.json  openrouter-composite-lengths.md  openrouter-kimi-results.json  openrouter-kimi-results.md  openrouter-nemotron-results.json  openrouter-nemotron-results.md  openrouter-results.json  openrouter-results.md  openrouter-s5-results.json  openrouter-s5-results.md  recall-readout-results.md  related-work.md  results-ci.md  results.md  state-tracking-results.md  tasks.md  v2-testing-cycle.md
examples/: eval_api.py  eval_hf.py
factworld/: __init__.py  backends.py  baselines.py  benchmark.py  config.py  corpus.py  data.py  edits.py  eval.py  models.py  oracle.py  render.py  runner.py  s5_concrete.py  tasks.py  tokenizer.py  train.py  validity.py  world.py
phases/: README.md
reports/: factworld-consolidated.md  factworld-local-vs-api.md  factworld.md  frontier-benchmark.md
results/: api_longctx_20260627_223045.json  api_natural_grid_20260626_143855.json  autoregressive_api_20260626_102655.jsonl  autoregressive_api_20260626_102655.md  autoregressive_api_20260626_135844.jsonl  autoregressive_api_20260626_142145.jsonl  autoregressive_formatfair_20260626_224937.jsonl  autoregressive_formatfair_20260626_224937.md  autoregressive_glm_20260626_153703.jsonl  autoregressive_glm_20260626_153703.md  (+347 more)
(+320 files in other folders)
